@@ -25,6 +25,7 @@ documents those changes that are of interest to users and admins.
     the default in dynamic mode.  Previously it always defaulted to TORUS.
  -- Made squeue -n and -w options more consistent with salloc, sbatch, srun,
     and scancel. Patch by Don Lipari, LLNL.
+ -- Have sacctmgr remove user records when no associations exist for that user.
 
 * Changes in SLURM 2.4.0.pre2
 =============================
